Changelog
=========

2.1.11 (unreleased)
-------------------

- Nothing changed yet.


2.1.10 (2011-09-19)
-------------------

- Fix possible ZCML load order issue by explicitly loading CMF permissions.
  Fixes http://dev.plone.org/plone/ticket/11869
  [davisagli]

- Fix bug where getNavigationRootObject goes into infinite loop if context is 
  None.
  Fixes http://dev.plone.org/plone/ticket/12186
  [anthonygerrard]

2.1.9 (2011-08-31)
------------------

- Accessibility: Added a title and alt tag to the logo.
  This fixes http://dev.plone.org/plone/ticket/11689
  [fulv]

- Switching 'Skip to navigation' to be linked to the global navigation instead
  of the navigation portlet.
  This fixes http://dev.plone.org/plone/ticket/11728
  [spliter]

- Refactor getNavigationRoot to make it simpler, fixing issues when
  relativeRoot is specified.
  [gotcha]

2.1.8 - 2011-07-04
------------------

- Show 'Manage portlets' fallback viewlet for all ILocalPortletAssignables, not
  just ATContentTypes items. This fixes
  http://code.google.com/p/dexterity/issues/detail?id=183
  [davisagli]

2.1.7 - 2011-06-30
------------------

- Footer viewlet have all viewlet base API (site_url, navigation_root_url, etc).
  [thomasdesvenain]

- Make the bodyClass play more nice with ZopeViewPageTemplateFile.
  This fixes https://dev.plone.org/plone/ticket/11825
  [WouterVH]


2.1.6 - 2011-06-02
------------------

- Use getPhysicalPath instead of absolute_url_path to handle correctly
  virtual hosting.
  This fixes http://dev.plone.org/plone/ticket/8787
  [encolpe]


2.1.5 - 2011-05-12
------------------

- Page title and logo image title are related to navigation root.
  Refs http://dev.plone.org/plone/ticket/9175.
  Added navigation_root_title to portal_state view.
  [thomasdesvenain]

- Fix missing workflow history entry for content creation. Closes #11305.
  [rossp]

- Respect typesUseViewActionInListings in sitemap.xml.
  [elro]

- Use the parent url for default pages in sitemap.xml.